# ipcrawler

./: .clippy.toml  .codespellignore  .env.example  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .yamllint.yml  AUTHORS.md  BUILD_PHASES.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD_CONTROLS.md  DEVELOPMENT_GUIDE.md  Dockerfile  Full_Report_Example.html  LICENSE  MAKEFILE_GUIDE.md  Makefile  README.md  RELEASE.md  TEST_RESULTS.md  WORDLIST_AUDIT_MANIFEST.md  bootstrap.sh  config.toml  config.toml.backup  config.yaml  config_loader.py  debug_ui.rs  docker-compose.yml  global.toml  go.mod  go.sum  install.sh  ipcrawler-clean.bat  ipcrawler-cmd  ipcrawler-windows-debug.bat  ipcrawler-windows.bat  ipcrawler.md  (+19 more)
.cargo/: config.toml
.claude/commands/: rules.md
.github/: CODE_QUALITY.md  FUNDING.yml  README.md  dependabot.yml
.github/workflows/: .github_workflows_cleanup_check.yml  ai-code-review.yml  build.yml  ci.yml  code-quality-check.yml  codeql.yml  discord-notifications.yml  lint_python.yml  megalinter.yml  release.yml  rust-checks.yml  rust-quality.yml  test-workflow-compatibility.yml  test.yml  unstable.yml  version-notification.yml
benches/: discovery_bench.rs  parser_bench.rs
config/: YAML_CONFIGURATION.md  __init__.py  config_loader.py  default.toml  default.yaml  htb.yaml  ports.yaml  providers.toml  tools.yaml  wordlists.yaml
configs/: output.toml  presets.toml  security.toml  templates.toml  workflows.toml
data/: test-wordlist.txt
data/wordlists/: spring-boot-actuator.txt  wordlists.toml
database/: __init__.py
database/ports/: __init__.py  db.md  models.py  port_db.json  port_db.json.backup
database/scorer/: README.md  __init__.py  cache.py  mappings.py  migrate_cache.py  models.py  rule_audit.py  rules.py  scorer_engine.py
database/technologies/: __init__.py  models.py  scanner_config.json  scanner_models.py  tech_db.json
database/temp/: .gitignore
database/wordlists/: .gitkeep  generate_catalog.py  resolver.py  validate_catalog.py
docs/: ARCHITECTURE.md  CI_OPTIMIZATION_GUIDE.md  CONFIGURATION.md  DEVELOPMENT.md  EMBEDDING_MODELS.md  LLM_INTEGRATION.md  MODERNIZATION_PLAN.md  PRODUCTION_ARCHITECTURE.md  SECURITY.md  TOOLS.md  TROUBLESHOOTING.md  USAGE.md  WORKFLOW_GUIDE.md  http.md  installation.md  output-directories.md  phase1-2-of-building.md  phase3-4-of-building.md  plan-for-the-ai.md  wf00.md  workflows.md
docs/plans/: 2026-03-04-tool-picker-design.md  (+2 more)
ipcrawler/: __init__.py  config.py  config.toml  config.toml.bak  consolidator.py  example-fast-scan.toml  global.toml  io.py  jinja_html_reporter.py  live_status.py  loading.py  logger.py  main.py  models.py  parse_logs.py  plugin_debugger.py  plugins.py  report_builder.py  report_renderer.py  smart_wordlist_selector.py  targets.py  technology_detector.py  tool_validator.py  user_display.py  validator.py  vhost_post_processor.py  wordlists.py  yaml_executor.py  yaml_integration.py  yaml_plugins.py
media/: README.md  ascii-art.txt
models/: __init__.py  wordlist_config.py
report_templates/: summary.md.j2  summary.txt.j2
schemas/: tools-schema.yaml
scripts/: README.md  check_deps.sh  check_hakrawler.py  check_seclists.sh  check_tools.sh  cleanup.sh  configure-wordlists.sh  deep_clean.sh  fix-permissions.sh  generate_catalog.sh  generate_seclists_catalog.py  install-tools-debian.sh  install-tools-macos.sh  install.sh  install_deps.sh  install_go.sh  install_hakrawler.py  install_tools.sh  ipcrawler-manager.sh  master_report  populate_catalog_mappings.py  quick_install.sh  reset-cache.sh  run.sh  setup-docker.sh  setup-python.sh  setup_wizard.sh  test-ci-locally.sh  test_audit.sh  test_sudo_deps.sh  update.sh  validate-workflow.sh
src/: app.rs  cli.rs  config.rs  doctor.rs  error_handler.rs  executor.rs  gradient.rs  help.rs  hostname.rs  main.rs  output.rs  parser.rs  paths.rs  pipeline.rs  ports.rs  preflight.rs  progress.rs  reporter.rs  table.rs  template.rs  update.rs  validator.rs  wordlists.rs
templates/: JSON-PLUGIN-GUIDE.md  README.md  base.html.j2  curl.yaml  dig-advanced.sh  dig.yaml  enum4linux-ng.yaml  example-wordlist-demo.json  ffuf-directory.yaml  ffuf-parameters.yaml  ffuf-subdomain.yaml  ffuf-vhost.yaml  gobuster.sh  gobuster.yaml  hostname-discovery.yaml  naabu.yaml  nikto.yaml  nmap-quick.yaml  nmap-simple.yaml  nmap-sudo.yaml  nmap.yaml  nuclei-cve.yaml  nuclei-tech.yaml  nuclei.sh  nuclei.yaml  ping.sh  ping.yaml  professional_base.html.j2  professional_target.html.j2  reverse-dns.sh  reverse-dns.yaml  scripts.js  security_analysis_base.html.j2  security_analysis_target.html.j2  smbmap.yaml  snmp-check.yaml  snmpwalk.sh  snmpwalk.yaml  ssh-audit.yaml  styles.css  (+5 more)
testing/: README.md  chain_test.yaml  error_test.yaml  fast_chain.yaml  invalid.yaml  invalid_chain.yaml  many_tools_test.yaml  test-failure.yaml  test.yaml  test_missing.yaml
tests/: __init__.py  conftest.py  file_discovery.py  fix_jinja2_template_system.py  fix_plugin_variables.py  fix_yaml_variable_system.py  full_suite_integration_test.py  generate_compatibility_report.py  ipcrawler_cleanup.py  run_tests.py  sample_workflow_data.json  simulate_ci_cleanup_check.py  test_all_plugins.py  test_all_plugins_working.py  test_cleanup_e2e.py  test_config.py  test_discovery_manual.py  test_e2e.py  test_file_discovery.py  test_integration.py  test_privacy.py  test_targets.py  test_targets_simple.py  test_workflow_compatibility.py  test_workflow_integration.py  test_workflow_sequence.py  test_yaml_plugins.py  test_yaml_plugins_simple.py
tools/: README.md  comprehensive-scan.yaml  dig.yaml  dnsenum.yaml  gobuster-vhost.yaml  gobuster.yaml  host.yaml  httpx.yaml  httpx_enumeration.yaml  masscan.yaml  network-recon.yaml  nikto.yaml  nmap.yaml  nmap_comprehensive.yaml  ping.yaml  sqlmap.yaml  sslscan.yaml  traceroute.yaml  web-recon.yaml  whatweb.yaml  whois.yaml
utils/: async_file_writer.py  debug.py  next_steps_generator.py  results.py
windows-scripts/: README.md  ipcrawler-clean.bat  ipcrawler-windows.bat  reset-cache.bat
workflows/: README.md
(+864 files in other folders)
