[package]
name = "ipcrawler"
version = "0.1.0"
edition = "2021"
authors = ["Carlos M. <carlos@neur0map.io>"]
description = "IP-focused reconnaissance tool with LLM-powered output parsing"
license = "MIT"
repository = "https://github.com/neur0map/ipcrawler"

[[bin]]
name = "ipcrawler"
path = "src/main.rs"

[dependencies]
# CLI & Async Runtime
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP & API Clients
reqwest = { version = "0.11", features = ["json"] }

# Security & Storage
keyring = "2.0"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
typenum = "1.15"

# Terminal UI & Progress
indicatif = "0.17"
colored = "2.0"
console = "0.15"

# Error Handling & Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Async Utilities
futures = "0.3"
async-trait = "0.1"

# Template Engine
tera = "1.19"
bincode = "1.3"

# File System & Path Handling
dirs = "5.0"
walkdir = "2.0"

# Regular Expressions (for preprocessing only)
regex = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true