[package]
name = "ipcrawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
ratatui = "0.28"
crossterm = "0.28"
regex = "1"
handlebars = "6"
ipnetwork = "0.20"
colored = "2"
chrono = "0.4"
