[tool.poetry]
name = "ipcrawler"
version = "2.1.2"
description = "A multi-threaded network reconnaissance tool which performs automated enumeration of services."
authors = ["neur0map"]
license = "GNU GPL v3"
exclude = ["ipcrawler.py"]
packages = [
	{ include = "ipcrawler" },
]

[tool.poetry.dependencies]
python = "^3.8"
platformdirs = "^4.3.6"
colorama = "^0.4.5"
cryptography = "^44.0.1"  # Security fix for CVE-2024-12797
impacket = "^0.10.0"
psutil = "^5.9.4"
requests = "^2.28.1"
toml = "^0.10.2"
Unidecode = "^1.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ipcrawler = "ipcrawler.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff - Modern Python linting and formatting
[tool.ruff]
target-version = "py39"
line-length = 127

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args
