[tool.poetry]
name = "ipcrawler"
version = "0.1.0-alpha"
description = "A multi-threaded network reconnaissance tool which performs automated enumeration of services."
authors = ["Tib3rius"]
license = "GNU GPL v3"
exclude = ["ipcrawler.py"]
packages = [
	{ include = "ipcrawler" },
]

[tool.poetry.dependencies]
python = "^3.8"
platformdirs = "^4.3.6"
colorama = "^0.4.5"
impacket = "^0.10.0"
psutil = "^5.9.4"
requests = "^2.28.1"
toml = "^0.10.2"
Unidecode = "^1.3.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
ipcrawler = "ipcrawler.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
